# websocket-chat

./: .gitignore  .mailmap  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: rooms.py  ws.py
app/core/: exceptions.py  logger.py  metrics.py
app/db/: base.py  session.py
app/models/: message.py  user.py
app/schemas/: rest.py  ws_message.py
app/services/: auth.py  connection_manager.py  message_repository.py  redis_client.py
docker/: Dockerfile  docker-compose.yml  nginx.conf
migrations/: env.py
migrations/versions/: 386bb1d8c556_create_messages_table.py
scripts/: init-redis.sh
tests/: conftest.py  factories.py  test_rest.py  test_ws.py
